--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -28,7 +28,7 @@ scrape_configs:
     static_configs:
       - targets: ["localhost:9090"]
 
-  - job_name: 'FoodReservation'
+  - job_name: 'BlackFriday'
     scrape_interval: 5s # Poll every 5 seconds for a more responsive demo.
     static_configs:
-      - targets: ["food-reservation"]  ## Enter the HTTP port number of the demo app.
+      - targets: ["black-briday"]  ## Enter the HTTP port number of the demo app.
