removed foodReservation logic

--- a/BlackFriday.Application/BlackFriday.Application.csproj
+++ b/BlackFriday.Application/BlackFriday.Application.csproj
@@ -15,4 +15,8 @@
 		<ProjectReference Include="..\BlackFriday.Domain\BlackFriday.Domain.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Usecases\" />
+	</ItemGroup>
+
 </Project>
