--- a/BlackFriday/appsettings.json
+++ b/BlackFriday/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FoodDb": "Host=host.docker.internal;Database=food_db;Username=postgres;Password=!@#123qwe"
-  }
+    "FoodDb": "Host=host.docker.internal;Database=black_friday_db;Username=postgres;Password=!@#123qwe",
+  },
+  "ServiceName": "BlackFriday"
 }
