--- a/BlackFriday.LoadTester/BlackFriday.LoadTester.csproj
+++ b/BlackFriday.LoadTester/BlackFriday.LoadTester.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,10 +9,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" />
+    <PackageReference Include="Microsoft.Extensions.Http" />
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\BlackFriday\BlackFriday.Infrastructure.csproj" />
-  </ItemGroup>
-
 </Project>
