fix connection string

--- a/BlackFriday/appsettings.Development.json
+++ b/BlackFriday/appsettings.Development.json
@@ -5,4 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "BlackFridayDb": "Host=host.docker.internal;Database=black_friday_db;Username=postgres;Password=!@#123qwe",
+  }
 }
