--- a/BlackFriday.Application/BlackFriday.Application.csproj
+++ b/BlackFriday.Application/BlackFriday.Application.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="Mediator.Abstractions" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
+		<PackageReference Include="System.Diagnostics.DiagnosticSource" />
 	</ItemGroup>
 
 	<ItemGroup>
